--- a/index.html
+++ b/index.html
@@ -14,19 +14,24 @@
 <body>
 
     <section class="grid grid-cols-12 divide-x divide-green-500 divide-purple-600 divide-opacity-25">
-        <div class="col-span-1">
 
-            <h1>fjjfjfjjfjf</h1>
-            <h1>fjjfjfjjfjf</h1>
-            <h1>fjjfjfjjfjf</h1>
-            <h1>fjjfjfjjfjf</h1>
-            <h1>fjjfjfjjfjf</h1>
-            <h1>fjjfjfjjfjf</h1>
-            <h1>fjjfjfjjfjf</h1>
-            <h1>fjjfjfjjfjf</h1>
-            <h1>fjjfjfjjfjf</h1>
-            <h1>fjjfjfjjfjf</h1>
-            <h1>fjjfjfjjfjf</h1>
+        <div class="col-span-1 pt-10 pb-10">
+
+            <div class="grid grid-rows-3">
+
+                <div class="flex justify-center row-span-2">
+                    <p>V</p>
+                </div>
+
+                <div class="flex flex-col justify-center row-span-1">
+                    <img class="px-10 py-3" src="images/Social Icons/Twitter.png" alt="">
+                    <img class="px-10 py-3" src="images/Social Icons/Instagram.png" alt="">
+                    <img class="px-10 py-3" src="images/Social Icons/Dribbble.png" alt="">
+                    <img class="px-10 py-3" src="images/Social Icons/Youtube.png" alt="">
+                </div>
+
+            </div>
+
         </div>
 
         <div class="col-span-11">
@@ -69,7 +74,7 @@
 
             <main>
 
-                <section class="container md:flex items-center p-10 justify-around">
+                <section class="container md:flex items-center px-10 justify-around">
 
 
                     <div class="">
@@ -96,7 +101,14 @@
 
             </main>
 
-            <footer>
+            <footer class="pb-10">
+
+                <div class="flex justify-around divide-x divide-green-500">
+
+                    <p>fjfjfj</p>
+                    <div class="p-5">3</div>
+                    <div class="p-5">45</div>
+                </div>
 
             </footer>
 
