--- a/index.html
+++ b/index.html
@@ -101,15 +101,21 @@
 
             </main>
 
-            <footer class="pb-10">
-
-                <div class="flex justify-around divide-x divide-green-500">
-
-                    <p>fjfjfj</p>
-                    <div class="p-5">3</div>
-                    <div class="p-5">45</div>
+            <footer>
+                <div class=" flex divide-x divide-gray-500">
+                    <div class="px-10">
+                        <p class="text-gray-700 text-xl font-bold  ">Email</p>
+                        <p class=" text-gray-700">venissa@gothem.com</p>
+                    </div>
+                    <div class="px-32">
+                        <p class=" text-gray-700 text-xl font-bold ">Phone</p>
+                        <p class="text-gray-700">+190-300-444-5555</p>
+                    </div>
+                    <div class="px-32">
+                        <p class="text-gray-700 text-xl font-bold ">Location</p>
+                        <p class="text-gray-700">Gotham City,Arkham</p>
+                    </div>
                 </div>
-
             </footer>
 
         </div>
